# memory-allocator

./: CMakeLists.txt  README.md  memalloc.c
inc/: memalloc.h
src/: memalloc.c
unittests/: CMakeLists.txt  memallocTESTS.cc
